--- a/templates/mines.html
+++ b/templates/mines.html
@@ -163,7 +163,7 @@
     </div>
 
     <!-- POST request button -->
-    <form method="POST" action="/submit-mines">
+    <form method="POST" action="/mines">
         <button type="submit">Submit Mines</button>
     </form>
 
@@ -172,3 +172,4 @@
     </div>
 </body>
 </html>
+
