--- a/templates/towers.html
+++ b/templates/towers.html
@@ -155,12 +155,9 @@
 
     <!-- POST request button -->
     <form method="POST" action="/towers">
-        <button type="submit">Submit Towers</button>
+        <button type="submit">Play Towers</button>
     </form>
-
-    <div class="footer-text">
-        Don’t have an account? <a href="/register">Register</a>
-    </div>
 </body>
 </html>
+
 
