--- a/templates/mines.html
+++ b/templates/mines.html
@@ -164,9 +164,10 @@
 
     <!-- POST request button -->
     <form method="POST" action="/mines">
-        <button type="submit">Submit Mines</button>
+        <button type="submit">Play Mines</button>
     </form>
 </body>
 </html>
+
 
 
