--- a/templates/towers.html
+++ b/templates/towers.html
@@ -101,6 +101,10 @@
 <body>
     <h1>Towers Game</h1>
 
+    {% if error %}
+        <p class="error-message">{{ error }}</p>
+    {% endif %}
+
     <div class="grid">
         <!-- Towers (Green) -->
         <div class="cell tower"></div>
@@ -159,5 +163,4 @@
     </form>
 </body>
 </html>
-
 
