--- a/templates/mines.html
+++ b/templates/mines.html
@@ -148,6 +148,12 @@
             background: #333;
             border-color: #555;
         }
+        
+        .error-message {
+            color: #ff5555;
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
     </style>
 </head>
 
@@ -170,6 +176,9 @@
 
 <main>
     <div class="card">
+        {% if error %}
+            <p class="error-message">{{ error }}</p>
+        {% endif %}
         <h1>Mines</h1>
 
        
@@ -250,6 +259,7 @@
 </main>
 </body>
 </html>
+
 
 
 
